RESOLVED FIXED244082
[GStreamer] Fix WebRTC build.......
https://bugs.webkit.org/show_bug.cgi?id=244082
Summary [GStreamer] Fix WebRTC build.......
Philippe Normand
Reported 2022-08-18 02:16:42 PDT
sigh
Attachments
Philippe Normand
Comment 1 2022-08-18 02:19:22 PDT
EWS
Comment 2 2022-08-18 02:21:53 PDT
Committed 253555@main (ea7115eaf776): <https://commits.webkit.org/253555@main> Reviewed commits have been landed. Closing PR #3447 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-08-18 02:22:16 PDT
Note You need to log in before you can comment on or make changes to this bug.