[GStreamer] Fix WebRTC build....... https://bugs.webkit.org/show_bug.cgi?id=244082

Unreviewed.

* Source/WebCore/platform/mediastream/gstreamer/GStreamerDTMFSenderBackend.cpp:
(WebCore::GStreamerDTMFSenderBackend::playTone):
(WebCore::GStreamerDTMFSenderBackend::onTonePlayed):
* Source/WebCore/platform/mediastream/gstreamer/GStreamerDTMFSenderBackend.h:

Canonical link: https://commits.webkit.org/253555@main